# dash-with-transformer

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.json  settings.local.json
backend/: pyproject.toml
backend/dash_with_transformer/: engine.py  server.py
backend/llm_dasher/: engine.py  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: matvec.wasm  model_q8.json
frontend/src/: async-iterables.ts  backend.ts  charcode.test.ts  cursor.test.ts  cursor.ts  detokenize.test.ts  detokenize.ts  lstm-worker.ts  lstm.ts  main.ts  models.test.ts  models.ts  rational.test.ts  render.ts  scene.test.ts  scene.ts  smollm.ts  toast.ts  trie-cache.test.ts  trie-cache.ts  types.ts
frontend/src/lstm/: lstm-worker.ts  lstm.ts
frontend/src/remote/: backend.ts
frontend/src/wasm/: build.sh  matvec.c
frontend/src/webgpu/: charcode-model.ts  charcode.test.ts  detokenize.md  detokenize.test.ts  detokenize.ts  smollm.ts
src/: backend.ts  cursor.test.ts  cursor.ts  detokenize.md  main.ts  models.test.ts  models.ts  rational.ts  render.ts  scene.test.ts  scene.ts  trigram.ts  types.ts
