[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-with-transformer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "genlm-bytes",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
dash-with-transformer = "dash_with_transformer.server:main"
